Fix z-index

--- a/medias/Categorised/bathspa.ac.uk/System files, tests,  uploads/theme/css/hero-bg-image.css
+++ b/medias/Categorised/bathspa.ac.uk/System files, tests,  uploads/theme/css/hero-bg-image.css
@@ -22,6 +22,7 @@
     margin-bottom: unset;
     top: -11px;
     left: 1rem;
+    z-index: 1;
 }
 
 .hero-bg-image__content {
